@@ -11,6 +11,8 @@ PyObjC NEWS</title>
 <p>An overview of the relevant changes in new, and older, releases.</p>
 <h2><a name="version-1-3-1-2005-04">Version 1.3.1 (2005-04-??)</a></h2>
 <ul>
+<li>Fixed bug in the NSBundle hack that caused a NULL pointer to be
+dereferenced if looking up a non-existent class using NSBundle API.</li>
 <li>Added <code><span>OC_PythonUnicode</span></code> and <code><span>OC_PythonString</span></code> classes that
 preserve the identity of <code><span>str</span></code> and <code><span>unicode</span></code> objects across
 the bridge.  Additionally, bridge for <code><span>str</span></code> now uses the default
